# octree-TS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  annotate_points_boxes.py  compile.bat  compile.sh  create_ply.py  create_video.py  full_eval.py  metrics.py  render.py  requirements.txt  test_model.py  train.py
arguments/: __init__.py
bash_scripts/: run_all.sh
bash_scripts/m360_indoor/: eval_bonsai.sh  eval_counter.sh  eval_kitchen.sh  eval_room.sh
bash_scripts/m360_outdoor/: eval_bicycle.sh  eval_flowers.sh  eval_garden.sh  eval_stump.sh  eval_treehill.sh
checkpoints/: download_ckpts.sh
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  triangle_model.py
segmentation/: create_ply.py  extract_images.py  run_single_object.py  sam_mask_generator_json.py  segment.py
src/: CMakeLists.txt
src/aabb_tree/: aabb_tree.cu  aabb_tree.cuh  aabb_tree.h
src/delaunay/: delaunay.cu  delaunay.cuh  delaunay.h  delete_violations.cu  exact_tree_ops.cuh  growth_iteration.cu  predicate.cuh  sample_initial_tets.cu  shewchuk.cuh  sorted_map.cuh  triangulation_ops.cu  triangulation_ops.h
src/utils/: common_kernels.cu  common_kernels.cuh  cuda_array.h  cuda_helpers.h  geometry.h  random.h  typing.h  unenumerate_iterator.cuh
torch_bindings/: CMakeLists.txt  bindings.h  common_kernels_wrapper.h  torch_bindings.cpp  triangulation_bindings.cu  triangulation_bindings.h
torch_bindings/triangulation/: __init__.py.in
triangle_renderer/: __init__.py
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  system_utils.py
